# wsistream

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
components/backends/: index.html
components/dataset-adapters/: index.html
components/filters/: index.html
components/sampling/: index.html
components/tissue-detection/: index.html
components/transforms/: index.html
components/views/: index.html
concepts/architecture/: index.html
concepts/online-patching/: index.html
docs/: getting-started.md  index.md
docs/components/: backends.md  dataset-adapters.md  filters.md  sampling.md  tissue-detection.md  transforms.md  views.md
docs/concepts/: architecture.md  online-patching.md
docs/integration/: benchmarking.md  ddp.md  pytorch-dataloader.md  wandb.md
docs/recipes/: gpfm.md  index.md  midnight.md  phikon.md  prov-gigapath.md  uni.md  virchow.md
examples/: demo_pipeline.py  train_ddp.py  train_single_gpu.py
getting-started/: index.html
integration/benchmarking/: index.html
integration/ddp/: index.html
integration/pytorch-dataloader/: index.html
integration/wandb/: index.html
recipes/: index.html
recipes/gpfm/: index.html
recipes/midnight/: index.html
recipes/phikon/: index.html
recipes/uni/: index.html
scripts/: _helpers.py  plot_continuous_magnification.py  plot_filters.py  plot_pipeline_overview.py  plot_recipe_comparison.py  plot_samplers.py  plot_stain_augmentation.py  plot_tissue_detectors.py  plot_transforms.py  plot_views.py
search/: search_index.json
tests/: README.md  conftest.py  test_benchmark.py  test_benchmarks.py  test_continuous_magnification.py  test_datasets.py  test_e2e.py  test_filters.py  test_pipeline.py  test_sampling.py  test_slide.py  test_tissue.py  test_torch.py  test_torch_e2e.py  test_torch_monitor.py  test_transforms.py  test_types.py  test_views.py  test_viz.py  test_without_replacement.py
(+40 files in other folders)
