[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wsistream"
version = "0.1.1"
description = "Modular online patch streaming from whole-slide images for computational pathology"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Ramon Kaspar"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
    "Pillow>=9.0",
    "scikit-image>=0.20",
    "opencv-python-headless>=4.7",
    "requests>=2.28",
    "tqdm>=4.60",
]

[project.optional-dependencies]
openslide = ["openslide-python>=1.2", "openslide-bin>=4.0"]
tiffslide = ["tiffslide>=2.0"]
torch = ["torch>=2.0"]
all = [
    "openslide-python>=1.2",
    "openslide-bin>=4.0",
    "tiffslide>=2.0",
    "albumentations>=1.3",
    "matplotlib>=3.7",
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "mkdocs-material>=9.0",
    "openslide-python>=1.2",
    "openslide-bin>=4.0",
    "tiffslide>=2.0",
    "albumentations>=1.3",
    "matplotlib>=3.7",
    "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/RamonKaspar/wsistream"
Documentation = "https://ramonkaspar.github.io/wsistream"
Repository = "https://github.com/RamonKaspar/wsistream"
Issues = "https://github.com/RamonKaspar/wsistream/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring real WSI files (pass --slide-dir to enable)",
    "benchmark: throughput and latency benchmarks (pass --slide-dir to enable)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
